deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fastapi-demo
  template:
    metadata:
      labels:
        deployment: fastapi-demo
    spec:
      containers:
      - name: fastapi
        image: ghcr.io/crisp2u/fastapi-demo:main
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
