deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-demo
spec:
  selector:
    app: fastapi-demo
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
