deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'

spec:
  tls:
    - hosts:
        - gn.serialized.me
      secretName: serialized-prod
  rules:
    - host: gn.serialized.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-demo
                port:
                  number: 8080
